--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JeevX Studio</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>JeevX Studio - Creative Design & Development Studio</title>
+    <meta name="description" content="JeevX Studio is a creative design and development studio that transforms businesses through exceptional design, branding, and digital experiences." />
+    <meta name="author" content="JeevX Studio" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
 
-    <meta property="og:title" content="jeevx-vision-studio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="JeevX Studio - Creative Design & Development Studio" />
+    <meta property="og:description" content="Transform your business with exceptional design, branding, and digital experiences. We create meaningful connections through creative solutions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://jeevxstudio.com" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="JeevX Studio - Creative Design & Development Studio" />
+    <meta name="twitter:description" content="Transform your business with exceptional design, branding, and digital experiences." />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
